udisks2: Cache available mount entries for volume check in a hash table

Rather than re-evaluating available mount points for each volume,
do cache the mount entries at the beginning and use them as a hash
table for quicker lookup.

Replaces https://gitlab.gnome.org/GNOME/gvfs/-/merge_requests/254
Closes https://gitlab.gnome.org/GNOME/gvfs/-/issues/778